Ensure the aspect ratio of the track thumbnail is maintained, and that it doesn't overflow the info-box.

--- a/app/components/fb-player/info/styles.scss
+++ b/app/components/fb-player/info/styles.scss
@@ -9,14 +9,18 @@
   background-color: $shade-2-l1;
   color: #ffffff;
   position: relative;
+  overflow: hidden;
 }
 
 .art, .overlay {
   position: absolute;
   height: 100%;
-  width: 100%;
   z-index: 0;
   background: rgba(0, 0, 0, 0.5);
+}
+
+.overlay {
+  width: 100%;
 }
 
 .content {
